Fixing poms a bit to try to get maven release plugin to work